--- a/index.css
+++ b/index.css
@@ -377,9 +377,8 @@ a.pic1{width:347px;float:left;display:inline}.Content-left .pic-T
 a.pic2{width:346px;float:right;display:inline}.Content-left .pic-T
 img{width:347px;height:223px}.Content-left .pic-B{margin-top:22px}.Content-left .pic-B
 img{width:715px;height:424px}.Content-right{width:362px;float:right}.Content-right
-a.pic4{margin-top:17px}.Content-right .pic3
-img{width:362px;height:443px}.Content-right .pic4
-img{width:362px;height:209px}.moreType{overflow:hidden}.moreType ul.Type-con{overflow:hidden}
+a.pic4{margin-top:17px}
+.Content-right .pic4 img{width:362px;height:209px}.moreType{overflow:hidden}.moreType ul.Type-con{overflow:hidden}
 .moreType ul.Type-con li{float:left;border-left:2px solid #e3e3e3;width:181px;height:30px;text-align:center;display:inline;font-family:'microsoft yahei'}
 .moreType ul.Type-con li a{line-height:30px;font-size:16px;background:url(images/bg_icon22.png) no-repeat;padding-left:35px;display:block;color:#333}.moreType ul.Type-con li.bg1
 a{background-position:0 0;padding-left:10px}.moreType ul.Type-con li.bg2
@@ -392,6 +391,7 @@ a{background-position:15px -150px}.moreType ul.Type-con li.bor-L-n{border-left:0
 auto}.IN_choice
 .item{padding-top:50px}
 .IN_choice .choice_title {text-align: center;}
+.Topic-inner h1 {text-align: center;}
 .Topic-inner .choice_title{height:0;overflow:hidden;zoom:1;text-align:center;color:#313131;padding-top:50px;background-repeat:no-repeat;background-position:center -100px;background-image:url(/statics/web2/images/choice_title.png)}.Cslides.choice_slides{padding-top:40px;padding-bottom:50px;overflow:visible;width:1100px}.Cslides{overflow:hidden;position:relative;width:100%}.in_slides
 .slides{zoom:1;position:relative}.in_slides .slides>li{display:none;float:left;width:100%;margin-right:-100%;position:relative;-webkit-backface-visibility:hidden;overflow:hidden}.in_slides .slides
 img{width:100%;display:block;position:relative;clear:both}.in_slides .slides>li:first-child{display:block}.Cslides.choice_slides
