--- a/less/decoration.less
+++ b/less/decoration.less
@@ -30,3 +30,106 @@
       transition:@over;
     }
 }
+
+// ----------------------------------------
+// ! add icon before content
+// ----------------------------------------
+.icon-before {
+  
+}
+
+// ----------------------------------------
+// ! flat  logo nav search format  nav
+//   group
+// ----------------------------------------
+nav.simple-flat {
+  height: @height-flat-navigation;
+  background: @c-ll-gray;
+}
+
+
+nav.simple-flat .container-fluid {
+  position: relative;
+  width: 100%;
+  height: @height-flat-navigation;
+  
+  .navbar-header {
+    position: absolute;
+    top: 50%;
+    left: 0;
+
+    transform: translateY(-50%);
+
+    a {
+      height: auto;;
+      padding: 0;
+      margin: 0;
+    }
+  }
+
+  ul.navbar-nav>li {
+    &::before {
+      position: absolute;
+      content: " ";
+      background: #DEDEDE;
+      width: 2px;
+      height: 30px;
+      top: 10px;
+      left: 0;
+    }
+
+    &:first-child::before {
+      background: none;
+    }
+
+    padding: 15px 30px;
+    position: relative;
+
+    &>a {
+      background: none;
+      background-color: transparent;
+      box-shadow: none;
+      padding: 0;
+      color: @c-d-gray;
+
+      &:hover {
+        background: none;
+        background-color: rgba(0,0,0,0) !important;
+
+        color: @c-golden;
+      }
+    }
+    &.open>a {
+      color: @c-golden;
+      background-color: transparent;
+      background: none;
+    }
+  }
+
+  .collapse {
+    position: absolute;
+    left: 300px;
+    top: 18px;
+    right: 0;
+
+    ul, form {
+      position: relative;
+
+      ul {
+        position: absolute;
+      }
+    }
+
+    ul {
+      margin-top: 16px;
+    }
+
+    form {
+      margin-top: 20px;
+
+      input {
+        width: 250px;
+      }
+    }
+  }
+}
