begin section area

--- a/inc/css/admin.css
+++ b/inc/css/admin.css
@@ -6,4 +6,43 @@
  * http://www.apache.org/licenses/LICENSE-2.0
  *
  * Designed and built with all the love in the world by @mdo and @fat.
- */#adminmenuback{z-index:0}.tab-container{margin-top:48px}#banner-option .banner-img{margin:48px 3px}#banner-option input.title,#banner-option input.imgurl,#banner-option input.url{margin-bottom:24px}#banner-option .preview{margin:24px 0}*{box-sizing:content-box}#banner-option *{box-sizing:border-box}.inputError{border-color:red!important}#titlewrap #title-prompt-text{padding:0 10px;line-height:1.7em}#wpwrap{background:#fff}
+ */
+#adminmenuback {
+  z-index: 0;
+}
+.tab-container {
+  margin-top: 48px;
+}
+#banner-option .banner-img {
+  margin: 48px 3px;
+}
+#banner-option input,
+#banner-option textarea {
+  margin-bottom: 24px;
+}
+#banner-option .preview {
+  margin: 24px 0;
+}
+* {
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+}
+#banner-option * {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.inputError {
+  border-color: red !important;
+}
+#titlewrap #title-prompt-text {
+  padding: 0 10px;
+  line-height: 1.7em;
+}
+#wpwrap {
+  background: #fff;
+}
+/* Small devices (tablets, 480px and up) */
+/* @media (min-width: 480px) { } */
+/* Small devices (tablets, 768px and up) */
+/* Medium devices (desktops, 992px and up) */
+/* Large devices (large desktops, 1200px and up) */
