--- a/less/decoration.less
+++ b/less/decoration.less
@@ -42,9 +42,12 @@
 // ! flat  logo nav search format  nav
 //   group
 // ----------------------------------------
+@height-flat-navigation: 100px;
+@c-golden: #D4AA6D;
 nav.simple-flat {
   height: @height-flat-navigation;
   background: @c-ll-gray;
+  margin-bottom: 0;
 }
 
 
