--- a/style.css
+++ b/style.css
@@ -7,8 +7,324 @@ Author:
 Author URI: 
 Tags: 
 */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+font,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td {
+  border: 0;
+  font-family: inherit;
+  font-size: 100%;
+  font-style: inherit;
+  font-weight: inherit;
+  margin: 0;
+  outline: 0;
+  padding: 0;
+  vertical-align: baseline;
+}
+:focus {
+  /* remember to define focus styles! */
+  outline: 0;
+}
+body {
+  background: #fff;
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+table {
+  /* tables still need 'cellspacing="0"' in the markup */
+  border-collapse: separate;
+  border-spacing: 0;
+}
+caption,
+th,
+td {
+  font-weight: normal;
+  text-align: left;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+}
+blockquote,
+q {
+  quotes: "" "";
+}
+a img {
+  border: 0;
+}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+/* =Global
+----------------------------------------------- */
+body,
+input,
+textarea {
+  color: #373737;
+  font: 15px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  line-height: 1.625;
+}
+body {
+  background: #e2e2e2;
+}
+#page {
+  background: #fff;
+}
+/* Headings */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  clear: both;
+}
+hr {
+  background-color: #ccc;
+  border: 0;
+  height: 1px;
+  margin-bottom: 1.625em;
+}
+/* Text elements */
+p {
+  margin-bottom: 1.625em;
+}
+ul,
+ol {
+  margin: 0 0 1.625em 2.5em;
+}
+ul {
+  list-style: square;
+}
+ol {
+  list-style-type: decimal;
+}
+ol ol {
+  list-style: upper-alpha;
+}
+ol ol ol {
+  list-style: lower-roman;
+}
+ol ol ol ol {
+  list-style: lower-alpha;
+}
+ul ul,
+ol ol,
+ul ol,
+ol ul {
+  margin-bottom: 0;
+}
+dl {
+  margin: 0 1.625em;
+}
+dt {
+  font-weight: bold;
+}
+dd {
+  margin-bottom: 1.625em;
+}
+strong {
+  font-weight: bold;
+}
+cite,
+em,
+i {
+  font-style: italic;
+}
+blockquote {
+  font-family: Georgia, "Bitstream Charter", serif;
+  font-style: italic;
+  font-weight: normal;
+  margin: 0 3em;
+}
+blockquote em,
+blockquote i,
+blockquote cite {
+  font-style: normal;
+}
+blockquote cite {
+  color: #666;
+  font: 12px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+}
+pre {
+  background: #f4f4f4;
+  font: 13px "Courier 10 Pitch", Courier, monospace;
+  line-height: 1.5;
+  margin-bottom: 1.625em;
+  overflow: auto;
+  padding: 0.75em 1.625em;
+}
+code,
+kbd,
+samp,
+var {
+  font: 13px Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
+}
+abbr,
+acronym,
+dfn {
+  border-bottom: 1px dotted #666;
+  cursor: help;
+}
+address {
+  display: block;
+  margin: 0 0 1.625em;
+}
+ins {
+  background: #fff9c0;
+  text-decoration: none;
+}
+sup,
+sub {
+  font-size: 10px;
+  height: 0;
+  line-height: 1;
+  position: relative;
+  vertical-align: baseline;
+}
+sup {
+  bottom: 1ex;
+}
+sub {
+  top: .5ex;
+}
+/* Forms */
+input[type=text],
+input[type=password],
+textarea {
+  background: #fafafa;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
+  color: #888;
+}
+input[type=text]:focus,
+textarea:focus {
+  color: #373737;
+}
+textarea {
+  padding-left: 3px;
+  width: 98%;
+}
+input[type=text] {
+  padding: 3px;
+}
+input#s {
+  background: url(images/search.png) no-repeat 5px 6px;
+  border-radius: 2px;
+  font-size: 14px;
+  height: 22px;
+  line-height: 1.2em;
+  padding: 4px 10px 4px 28px;
+}
+input#searchsubmit {
+  display: none;
+}
+/* Links */
+a {
+  color: #1982d1;
+  text-decoration: none;
+}
+a:focus,
+a:active,
+a:hover {
+  text-decoration: underline;
+}
+/* Assistive text */
+.assistive-text {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+}
+#access a.assistive-text:active,
+#access a.assistive-text:focus {
+  background: #eee;
+  border-bottom: 1px solid #ddd;
+  color: #1982d1;
+  clip: auto !important;
+  font-size: 12px;
+  position: absolute;
+  text-decoration: underline;
+  top: 0;
+  left: 7.6%;
+}
 .pd-lr-xs {
   padding: 0 6px;
+}
+a:hover {
+  text-decoration: none;
 }
 .btn-flat.btn-black {
   background: #000;
@@ -23,6 +339,7 @@ Tags:
 nav.simple-flat {
   height: 100px;
   background: #eeeeee;
+  margin-bottom: 0;
 }
 nav.simple-flat .container-fluid {
   position: relative;
@@ -127,69 +444,29 @@ body {
 .topbar2 .help {
   font-size: 12px;
 }
-nav.main {
-  height: 100px;
-  background: #eeeeee;
+.banner .item {
+  height: 411px;
+  overflow: hidden;
 }
-nav.main .container-fluid {
-  position: relative;
-  width: 100%;
-  height: 100px;
+.banner .carousel-caption a {
+  color: #fff;
 }
-nav.main .container-fluid .navbar-header {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+.banner .carousel-caption h3 {
+  font-size: 42px;
+  text-align: left;
 }
-nav.main .container-fluid .navbar-header a {
-  height: auto;
-  padding: 0;
-  margin: 0;
+.banner .carousel-caption p {
+  font-size: 24px;
+  text-align: left;
 }
-nav.main .container-fluid ul.navbar-nav > li {
-  padding: 15px 30px;
-  position: relative;
+.strong-type {
+  padding-top: 24px;
 }
-nav.main .container-fluid ul.navbar-nav > li::before {
-  position: absolute;
-  content: " ";
-  background: #DEDEDE;
-  width: 2px;
-  height: 60%;
-  top: 20%;
-  left: 0;
-}
-nav.main .container-fluid ul.navbar-nav > li:first-child::before {
-  background: none;
-}
-nav.main .container-fluid ul.navbar-nav > li > a {
-  background: none;
-  box-shadow: none;
-  padding: 0;
-}
-nav.main .container-fluid ul.navbar-nav > li > a:hover {
-  background: none;
+.strong-type h3 {
   color: #d4aa6d;
+  font-size: 18px;
 }
-nav.main .container-fluid .collapse {
-  position: absolute;
-  left: 300px;
-  top: 18px;
-  right: 0;
-}
-nav.main .container-fluid .collapse ul,
-nav.main .container-fluid .collapse form {
-  position: relative;
-}
-nav.main .container-fluid .collapse ul {
-  margin-top: 16px;
-}
-nav.main .container-fluid .collapse form {
-  margin-top: 20px;
-}
-nav.main .container-fluid .collapse form input {
-  width: 250px;
+.strong-type .item {
+  width: 33.33%;
+  float: left;
 }
