--- a/less/style.less
+++ b/less/style.less
@@ -14,6 +14,7 @@ Tags:
 
 body {
 	font-family: "Microsoft YaHei","Heiti SC","Heiti TC","Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 13px;
 }
 // ----------------------------------------
 // ! header area
@@ -74,17 +75,35 @@ body {
 // ----------------------------------------
 // ! section strong
 // ----------------------------------------
+section.strong {
+	background-color: #EEEEEE;
+}
 .strong-type {
 	padding-top: 24px;
+	border-bottom: 1px #d2d2d2 solid;
+	margin-bottom: 12px;
 
 	h3 {
-		color: @c-golden;
-		font-size: 18px;
+		color: #D4AA6D;
+		font-size: 20px;
+		margin: 6px 0 12px;
 	}
 
-	.item {
+	.items {
 		width: 33.33%;
 		float: left;
+		padding: 12px 48px 6px;
+	}
+
+	.items {
+		border-left: 1px #fff solid;
+		border-right: 1px #dfdcdc solid;
+	}
+	.items:first-child {
+		border-left: none;
+	}
+	.items:nth-child(3) {
+		border-right: none;
 	}
 }
 
