--- a/style.css
+++ b/style.css
@@ -417,6 +417,7 @@ nav.simple-flat .container-fluid .collapse form input {
 }
 body {
   font-family: "Microsoft YaHei", "Heiti SC", "Heiti TC", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px;
 }
 .topbar {
   height: 6px;
@@ -459,14 +460,31 @@ body {
   font-size: 24px;
   text-align: left;
 }
+section.strong {
+  background-color: #EEEEEE;
+}
 .strong-type {
   padding-top: 24px;
+  border-bottom: 1px #d2d2d2 solid;
+  margin-bottom: 12px;
 }
 .strong-type h3 {
-  color: #d4aa6d;
-  font-size: 18px;
+  color: #D4AA6D;
+  font-size: 20px;
+  margin: 6px 0 12px;
 }
-.strong-type .item {
+.strong-type .items {
   width: 33.33%;
   float: left;
+  padding: 12px 48px 6px;
+}
+.strong-type .items {
+  border-left: 1px #fff solid;
+  border-right: 1px #dfdcdc solid;
+}
+.strong-type .items:first-child {
+  border-left: none;
+}
+.strong-type .items:nth-child(3) {
+  border-right: none;
 }
