save homepage done section topic.

--- a/less/decoration.less
+++ b/less/decoration.less
@@ -136,3 +136,17 @@ nav.simple-flat .container-fluid {
     }
   }
 }
+
+// ----------------------------------------
+// ! grid
+// ----------------------------------------
+
+.img-resp-block {
+  display: block;
+  width: 100%;
+}
+
+.row-block {
+  height: 30px;
+  width: 100%;
+}
