--- a/less/variable.less
+++ b/less/variable.less
@@ -20,7 +20,7 @@
 @c-ll-gray: #EEEEEE; //nav
 @c-d-gray: #626262; //footer
 
-@c-golden: #D4AA6D;
+@c-golden: #d2a159;
 
 @c-black:#000; // title
 @c-l-black:#333; // describe
