--- a/less/basic.less
+++ b/less/basic.less
@@ -249,6 +249,10 @@ a:hover {
 	padding: 0 @size-xs;
 }
 
+.pd-l-xs {
+	padding-left: @size-xs;
+}
+
 // ----------------------------------------
 // ! a link
 // ----------------------------------------
