--- a/less/style.less
+++ b/less/style.less
@@ -90,7 +90,7 @@ section h1 {
 // ----------------------------------------
 // ! section strong
 // ----------------------------------------
-section.strong, section.preferential {
+section.strong, section.preferential, section.hotel {
 	background-color: #EEEEEE;
 }
 .strong-type {
@@ -126,7 +126,7 @@ section.strong, section.preferential {
 // ! section preferential
 // ----------------------------------------
 
-.preferential {
+section.slideshow {
 	padding-bottom: 105px;
 
 	.carousel-inner {
@@ -175,3 +175,43 @@ section.topic {
 	padding-bottom: 105px;
 }
 
+
+// ----------------------------------------
+// ! footer
+// ----------------------------------------
+footer {
+	color: @c-ll-black;
+
+	.row {
+		padding-top: 50px;
+		padding-bottom: 50px;
+
+		.row {
+			padding-top: 0;
+			padding-bottom: 0;
+		}
+	}
+
+	ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+	}
+
+	a {
+		color: inherit;
+	}
+
+	h3 {
+		padding-bottom: 12px;
+	}
+
+	.copyright {
+		padding: 23px 0 18px;
+		background: @c-l-black;
+
+		p {
+			padding-left: 17%;
+		}
+	}
+}
