set height to topic image block

--- a/less/style.less
+++ b/less/style.less
@@ -16,6 +16,7 @@ body {
 	font-family: "Microsoft YaHei","Heiti SC","Heiti TC","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 13px;
 }
+
 // ----------------------------------------
 // ! header area
 // ----------------------------------------
@@ -173,6 +174,29 @@ section.slideshow {
 section.topic {
 	background: #fff;
 	padding-bottom: 105px;
+}
+
+.topic {
+	.type1, .type2, .type3 {
+		overflow: hidden;
+
+		.img-responsive {
+			width: 100%;
+			max-width: auto;
+		}
+	}
+
+	.type1 {
+		height: 220px;
+	}
+
+	.type2 {
+		height: 665px-220px-30px;
+	}
+
+	.type3 {
+		height: 665px;
+	}
 }
 
 
