--- a/less/style.less
+++ b/less/style.less
@@ -205,6 +205,12 @@ section.topic {
 // ----------------------------------------
 footer {
 	color: @c-ll-black;
+	font-size: 12px;
+	line-height: 24px;
+
+	a {
+		font-size: 12px;
+	}
 
 	.row {
 		padding-top: 50px;
@@ -227,7 +233,7 @@ footer {
 	}
 
 	h3 {
-		padding-bottom: 12px;
+		padding-bottom: 18px;
 	}
 
 	.copyright {
