customer walker save prepare for bootstrap navbar

--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ nav.simple-flat .container-fluid .navbar-header a {
   margin: 0;
 }
 nav.simple-flat .container-fluid ul.navbar-nav > li {
-  padding: 15px 30px;
+  padding: 15px 24px;
   position: relative;
 }
 nav.simple-flat .container-fluid ul.navbar-nav > li::before {
@@ -381,6 +381,7 @@ nav.simple-flat .container-fluid ul.navbar-nav > li > a {
   box-shadow: none;
   padding: 0;
   color: #626262;
+  font-size: 14px;
 }
 nav.simple-flat .container-fluid ul.navbar-nav > li > a:hover {
   background: none;
