--- a/less/decoration.less
+++ b/less/decoration.less
@@ -85,7 +85,7 @@ nav.simple-flat .container-fluid {
       background: none;
     }
 
-    padding: 15px 30px;
+    padding: 15px 24px;
     position: relative;
 
     &>a {
@@ -94,6 +94,7 @@ nav.simple-flat .container-fluid {
       box-shadow: none;
       padding: 0;
       color: @c-d-gray;
+      font-size: 14px;
 
       &:hover {
         background: none;
