custom post type prepairation.

--- a/less/decoration.less
+++ b/less/decoration.less
@@ -130,6 +130,7 @@ nav.simple-flat .container-fluid {
 
     form {
       margin-top: 20px;
+      padding: 0;
 
       input {
         width: 250px;
