--- a/inc/css/admin.less
+++ b/inc/css/admin.less
@@ -40,6 +40,10 @@
 	box-sizing: border-box;
 }
 
+#poststuff * {
+	//box-sizing: content-box;
+}
+
 .inputError{
 	border-color: red !important;
 }
@@ -55,6 +59,9 @@
 	background: #fff;
 }
 
+[role="form"] {
+	margin: 36px 0 0;
+}
 
 /* Small devices (tablets, 480px and up) */
 /* @media (min-width: 480px) { } */
