done get thumbnail

--- a/less/basic.less
+++ b/less/basic.less
@@ -22,7 +22,6 @@ table, caption, tbody, tfoot, thead, tr, th, td {
      outline: 0;
 }
 body {
-     background: #fff;
      line-height: 1;
 }
 ol, ul {
@@ -63,7 +62,7 @@ body, input, textarea {
      line-height: 1.625;
 }
 body {
-     background: #e2e2e2;
+     background: #EEEEEE;
 }
 #page {
      background: #fff;
