--- a/less/style.less
+++ b/less/style.less
@@ -263,3 +263,53 @@ footer {
 		}
 	}
 }
+
+
+// ========================================
+// ! archive
+// ========================================
+
+.current-navigation {
+	background: #fff;
+
+	.breadcrumb {
+		background: none;
+		margin-bottom: 0;
+	}
+}
+
+.custom-post-type {
+	background: url(images/20140512165237HBUvCo.jpg) no-repeat;
+	background-size: contain;
+	padding-top: 326px;
+	min-height: 1000px;
+}
+
+// ----------------------------------------
+// ! sidebar
+// ----------------------------------------
+.archive-item-list {
+	.item {
+		margin-bottom: 24px;
+		height: 240px;
+		position: relative;
+	}
+
+	.left, .right {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+	}
+
+	.left {
+		width: 40%;
+		left: 0;
+		overflow: hidden;
+	}
+	.right {
+		width: 60%;
+		background: #fff;
+		padding: 12px;
+		right: 0;
+	}
+}
