--- a/style.css
+++ b/style.css
@@ -79,7 +79,6 @@ td {
   outline: 0;
 }
 body {
-  background: #fff;
   line-height: 1;
 }
 ol,
@@ -134,7 +133,7 @@ textarea {
   line-height: 1.625;
 }
 body {
-  background: #e2e2e2;
+  background: #EEEEEE;
 }
 #page {
   background: #fff;
@@ -613,4 +612,39 @@ footer .copyright {
 }
 footer .copyright p {
   padding-left: 17%;
+}
+.current-navigation {
+  background: #fff;
+}
+.current-navigation .breadcrumb {
+  background: none;
+  margin-bottom: 0;
+}
+.custom-post-type {
+  background: url(images/20140512165237HBUvCo.jpg) no-repeat;
+  background-size: contain;
+  padding-top: 326px;
+  min-height: 1000px;
+}
+.archive-item-list .item {
+  margin-bottom: 24px;
+  height: 240px;
+  position: relative;
+}
+.archive-item-list .left,
+.archive-item-list .right {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+}
+.archive-item-list .left {
+  width: 40%;
+  left: 0;
+  overflow: hidden;
+}
+.archive-item-list .right {
+  width: 60%;
+  background: #fff;
+  padding: 12px;
+  right: 0;
 }
