--- a/less/style.less
+++ b/less/style.less
@@ -282,17 +282,35 @@ footer {
 	background: url(images/20140512165237HBUvCo.jpg) no-repeat;
 	background-size: contain;
 	padding-top: 326px;
-	min-height: 1000px;
 }
 
 // ----------------------------------------
 // ! sidebar
 // ----------------------------------------
 .archive-item-list {
+	color: #777;
+	font-size: 12px;
+
 	.item {
 		margin-bottom: 24px;
 		height: 240px;
 		position: relative;
+	}
+
+	.well {
+		padding:6px 12px;
+		background: #F4F4F4;
+		border: none;
+		box-shadow: none;
+		margin: 0 -15px 12px;
+	}
+
+	h3 {
+		font-size: 16px;
+		font-weight: bold;
+		color: #000;
+		line-height: 30px;
+		margin-bottom: 12px;
 	}
 
 	.left, .right {
@@ -309,7 +327,23 @@ footer {
 	.right {
 		width: 60%;
 		background: #fff;
-		padding: 12px;
+		padding: 24px;
 		right: 0;
+	}
+
+	.bottom {
+		position: absolute;
+		width: 100%;
+		left: 0;
+		bottom: 15px;
+		padding: 0 15px 0 30px;
+
+		strong {
+			font-weight: normal;
+
+			font-size: 16px;
+			color: #333;
+			padding-right: 6px;
+		}
 	}
 }
