--- a/style.css
+++ b/style.css
@@ -624,12 +624,29 @@ footer .copyright p {
   background: url(images/20140512165237HBUvCo.jpg) no-repeat;
   background-size: contain;
   padding-top: 326px;
-  min-height: 1000px;
+}
+.archive-item-list {
+  color: #777;
+  font-size: 12px;
 }
 .archive-item-list .item {
   margin-bottom: 24px;
   height: 240px;
   position: relative;
+}
+.archive-item-list .well {
+  padding: 6px 12px;
+  background: #F4F4F4;
+  border: none;
+  box-shadow: none;
+  margin: 0 -15px 12px;
+}
+.archive-item-list h3 {
+  font-size: 16px;
+  font-weight: bold;
+  color: #000;
+  line-height: 30px;
+  margin-bottom: 12px;
 }
 .archive-item-list .left,
 .archive-item-list .right {
@@ -645,6 +662,19 @@ footer .copyright p {
 .archive-item-list .right {
   width: 60%;
   background: #fff;
-  padding: 12px;
+  padding: 24px;
   right: 0;
+}
+.archive-item-list .bottom {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 15px;
+  padding: 0 15px 0 30px;
+}
+.archive-item-list .bottom strong {
+  font-weight: normal;
+  font-size: 16px;
+  color: #333;
+  padding-right: 6px;
 }
