--- a/inc/css/admin.less
+++ b/inc/css/admin.less
@@ -36,7 +36,7 @@
 	box-sizing: content-box;
 }
 
-#banner-option *{
+#banner-option *, .media-modal ul *{
 	box-sizing: border-box;
 }
 
@@ -61,6 +61,53 @@
 
 [role="form"] {
 	margin: 36px 0 0;
+}
+
+
+// ----------------------------------------
+// ! for admin showcase
+// ----------------------------------------
+
+.showcase{
+	padding: 15px;
+
+	.item{
+		box-shadow: 0 0 5px #aaa;
+		margin: 10px 20px 10px 0;
+		display: inline-block;
+		&.template{
+			margin: 0;
+			padding: 0;
+		}
+
+		.edit-area{
+			position: relative;
+		}
+		.close{
+			float: right;
+			border: none;
+			background: none;
+			cursor: pointer;
+			color: #ccc;
+			position: absolute;
+			top: 0px;
+			font-size: 16px;
+			line-height: 18px;
+			vertical-align: top;
+
+			padding: 0 3px 4px;
+			opacity: 1;
+			right: 0px;
+			width: 20px;
+			height: 20px;
+			background: #000;
+			border: 1px solid #fff;
+
+			&:hover{
+				color: #fff;
+			}
+		}
+	}
 }
 
 /* Small devices (tablets, 480px and up) */
