--- a/less/style.less
+++ b/less/style.less
@@ -280,7 +280,6 @@ footer {
 
 .custom-post-type {
 	background: url(images/20140512165237HBUvCo.jpg) no-repeat;
-	background-size: contain;
 	padding-top: 326px;
 }
 
@@ -344,6 +343,51 @@ footer {
 			font-size: 16px;
 			color: #333;
 			padding-right: 6px;
+		}
+	}
+}
+
+
+// ----------------------------------------
+// ! single
+// ----------------------------------------
+.custom-single {
+	padding: 24px 0;
+
+	h1 {
+		font-size: 20px;
+		line-height: 34px;
+		font-weight: bold;
+	}
+
+	.sec-title {
+		padding: 0 0 12px;
+	}
+
+	.price {
+		strong {
+			font-size: 30px;
+		}
+	}
+
+	.carousel-indicators {
+		bottom: -10px;
+	}
+
+	.carousel-control {
+		width: 14%;
+	}
+}
+
+.post-showcase {
+	.item {
+		height: 400px;
+		overflow: hidden;
+
+		.img-responsive {
+			width: 100%;
+			height: 100%;
+			display: block;
 		}
 	}
 }
