--- a/style.css
+++ b/style.css
@@ -335,6 +335,12 @@ a:hover {
 .border-non {
   border: none;
 }
+.white-block {
+  height: 24px;
+}
+.white-block-12 {
+  height: 12px;
+}
 nav.simple-flat {
   height: 100px;
   background: #eeeeee;
@@ -622,7 +628,6 @@ footer .copyright p {
 }
 .custom-post-type {
   background: url(images/20140512165237HBUvCo.jpg) no-repeat;
-  background-size: contain;
   padding-top: 326px;
 }
 .archive-item-list {
@@ -677,4 +682,33 @@ footer .copyright p {
   font-size: 16px;
   color: #333;
   padding-right: 6px;
+}
+.custom-single {
+  padding: 24px 0;
+}
+.custom-single h1 {
+  font-size: 20px;
+  line-height: 34px;
+  font-weight: bold;
+}
+.custom-single .sec-title {
+  padding: 0 0 12px;
+}
+.custom-single .price strong {
+  font-size: 30px;
+}
+.custom-single .carousel-indicators {
+  bottom: -10px;
+}
+.custom-single .carousel-control {
+  width: 14%;
+}
+.post-showcase .item {
+  height: 400px;
+  overflow: hidden;
+}
+.post-showcase .item .img-responsive {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
