preview for customer

--- a/less/style.less
+++ b/less/style.less
@@ -397,6 +397,11 @@ footer {
 
 	// single page navigation
 	.in-page-nav {
+		&.affix {
+			left: 0;
+			top: 0;
+		}
+
 		ul {
 			margin: 0;
 			
@@ -418,6 +423,11 @@ footer {
 					background: #D4A96D;
 					color: #fff;
 				}
+			}
+
+			li.active a {
+				background: #D4A96D;
+				color: #fff;
 			}
 		}
 	}
