page template of single page of school

--- a/less/style.less
+++ b/less/style.less
@@ -631,3 +631,30 @@ nav.simple-flat .container-fluid {
     }
   }
 }
+
+
+
+// ========================================
+// ! sidebar
+// ========================================
+
+.sidebar {
+	
+	.sidebar-items {
+		.item {
+			padding: 0 24px;
+			line-height: 42px;
+			font-size: 14px;
+		}
+		.item:nth-child(2n+1) {
+			background: #fff;
+		}
+		.item:nth-child(2n) {
+			background: #F4F4F5;
+		}
+	}
+
+	.panel-body {
+		padding: 0;
+	}
+}	
